# ChenTelegramApi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TelegramAPI++.sln  TelegramAPI.sln  appveyor.yml
MTProtoGen/: MTProtoGen.vcxproj  main.cpp
TelegramAPI/: TelegramAPI.vcxproj  TelegramAPI.vcxproj.filters  authorizer.cpp  authorizer.hpp  connectioninfo.cpp  pqreq.cpp  pqreq.hpp  pqres.cpp  streamingutils.cpp  tlmethod.cpp  tlmethod.hpp  tlobject.cpp  tlobject.hpp  tlreqpqmethod.hpp
TelegramAPI++/: TelegramAPI++.vcxproj  TelegramAPI++.vcxproj.filters  authorizer.cpp  authorizer.hpp  connectioninfo.hpp  main.cpp  plainconnection.cpp  plainconnection.hpp  pq.cpp  pq.hpp  pqreq.cpp  pqreq.hpp  pqres.cpp  pqres.hpp  streamingutils.cpp  streamingutils.hpp  tlobject.cpp  tlobject.hpp  tlreqpqmethod.cpp
src/: TelegramApi.sln  TelegramApi.sln.DotSettings  main.cpp
src/Api/: TelegramApi.Api.csproj
src/Api/Properties/: AssemblyInfo.cs
src/MTProto/: TelegramApi.MTProto.csproj
src/MTProto/Authorization/: Authenticator.cs  IPqSolver.cs  PqData.cs  PqLopatinSolver.cs
src/MTProto/Connection/: ConnectionInfo.cs  IConnectionInfo.cs  IPlainConnection.cs  PlainConnection.cs
src/MTProto/Data/: ServerKeys.cs
src/MTProto/Encryption/: IRsaCrypter.cs  RsaCrypter.cs  ServerKeys.cs
src/MTProto/Properties/: AssemblyInfo.cs
src/MTProto/Utils/: ArrayUtils.cs  DebugUtils.cs
src/TLCore/: TLBytes.cs  TLFrame.cs  TLMethod.cs  TLObject.cs  TLVector.cs  TelegramApi.TLCore.csproj  packages.config
src/TLCore/Authorization/: PqInnerData.cs  ReqDhParams.cs  ReqPQ.cs  ReqPq.cs  (+7 more)
(+87 files in other folders)
